--- a/res/layout/floatview_spread_right.xml
+++ b/res/layout/floatview_spread_right.xml
@@ -9,48 +9,49 @@
         >
 
     <ImageView
-            android:id="@+id/spread_left_append"
+            android:id="@+id/spread_right_append"
+            android:layout_alignParentRight="true"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:scaleType="fitXY"
-            android:layout_alignParentLeft="true"
-            android:src="@drawable/lib_floatview_spread_left"
-            android:contentDescription="@string/left_append"/>
+            android:src="@drawable/floatview_spread_right"
+            android:contentDescription="@string/right_append"/>
 
     <rodrigo.floatview.view.SpreadLinearLayout
             android:id="@+id/spread_content"
             android:orientation="horizontal"
             android:layout_width="wrap_content"
             android:layout_height="48dp"
-            android:paddingRight="-5dp"
-            android:paddingTop="3dp"
+            android:paddingLeft="-5dp"
+            android:paddingTop="5dp"
             android:paddingBottom="6dp"
-            android:paddingLeft="20dp"
-            android:background="@drawable/lib_floatview_spread_bg"
-            android:layout_toRightOf="@id/spread_left_append"
+            android:paddingRight="20dp"
+            android:layout_toLeftOf="@id/spread_right_append"
+            android:background="@drawable/floatview_spread_bg"
             >
 
         <Button
-                android:id="@+id/personage"
+                android:id="@+id/quit"
                 android:layout_width="wrap_content"
                 android:layout_height="fill_parent"
-                android:drawableTop="@drawable/lib_floatview_personage_selector"
-                android:text="@string/person"
+                android:drawableTop="@drawable/floatview_quit_selector"
+                android:text="@string/quit"
                 android:textSize="12sp"
+                android:paddingLeft="-10dp"
                 android:textColor="@color/lib_floatview_textcolor_selector"
                 android:background="@color/transparent"/>
 
         <View
                 android:layout_width="1dp"
                 android:layout_height="27dp"
-                android:layout_marginTop="3dp"
-                android:background="@drawable/lib_seperate_line_port_dot"/>
+                android:layout_marginTop="2dp"
+                android:background="@drawable/seperate_line_port_dot"/>
 
         <Button
                 android:id="@+id/community"
                 android:layout_width="wrap_content"
                 android:layout_height="fill_parent"
-                android:drawableTop="@drawable/lib_floatview_community_selector"
+                android:drawableTop="@drawable/floatview_community_selector"
                 android:text="@string/community"
                 android:textSize="12sp"
                 android:textColor="@color/lib_floatview_textcolor_selector"
@@ -59,17 +60,16 @@
         <View
                 android:layout_width="1dp"
                 android:layout_height="27dp"
-                android:layout_marginTop="3dp"
-                android:background="@drawable/lib_seperate_line_port_dot"/>
+                android:layout_marginTop="2dp"
+                android:background="@drawable/seperate_line_port_dot"/>
 
         <Button
-                android:id="@+id/quit"
+                android:id="@+id/personage"
                 android:layout_width="wrap_content"
                 android:layout_height="fill_parent"
-                android:drawableTop="@drawable/lib_floatview_quit_selector"
-                android:text="@string/quit"
+                android:drawableTop="@drawable/floatview_personage_selector"
+                android:text="@string/person"
                 android:textSize="12sp"
-                android:paddingRight="-10dp"
                 android:textColor="@color/lib_floatview_textcolor_selector"
                 android:background="@color/transparent"/>
     </rodrigo.floatview.view.SpreadLinearLayout>
@@ -78,7 +78,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:scaleType="fitXY"
-            android:src="@drawable/lib_floatview_spread_right"
-            android:layout_toRightOf="@id/spread_content"
+            android:layout_toLeftOf="@id/spread_content"
+            android:src="@drawable/floatview_spread_left"
             android:contentDescription="@string/right_append"/>
 </RelativeLayout>
